[project]
name = "cms-py175"
version = "0.1.0"
description = ""
authors = [
    {name = "jt755A",email = "jot755A@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "cms_py175", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
